--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,67 @@
-body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4; }
-header, footer { background:#333; color:#fff; padding:10px 20px; text-align:center;}
-nav { background:#444; overflow:hidden; }
-nav a { float:left; color:#fff; padding:14px 16px; text-decoration:none;}
-nav a:hover { background:#ddd; color:#000;}
-main { padding:20px; max-width:1000px; margin:auto; background:#fff;}
-h2 { color:#333;}
-  .video-container { text-align: center; margin: 20px 0; }
-.social-links { text-align: center; margin: 10px 0; }
-.social-links a { margin: 0 10px; color: #fff; text-decoration: none; }
-.social-links a:hover { text-decoration: underline; }
+  body { 
+    font-family: Arial, sans-serif; 
+    margin: 0; 
+    padding: 0; 
+    background: #f4f4f4; 
+    min-height: 100vh; 
+    display: flex; 
+    flex-direction: column; 
+  }
+
+    header, footer { 
+      background-color: #333; 
+      color: white; 
+      padding: 10px 20px; 
+      text-align: center; 
+    }
+
+    nav { 
+        background-color: #3920d9; 
+        overflow: hidden; 
+        padding-left: 10%;
+      }
+
+    nav a { 
+      float: left; 
+      display: block; 
+      color: white; 
+      text-align: center; 
+      padding: 14px 16px; 
+      text-decoration: none;
+    }
+
+    nav a:hover { 
+      background-color: #ddd; 
+      color: black; 
+    }
+
+    main { 
+      padding: 20px; 
+      max-width: 1000px; 
+      margin: auto; 
+      background: white; 
+      flex: 1; 
+    }
+
+    h2, h3 { 
+      color: #333; 
+    }
+
+    ul { 
+      list-style: disc; 
+      margin-left: 20px; 
+    }
+    
+    .social-links a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: white;
+    }
+    .img-tabla-fase5 {
+      max-width: 100%;
+      border: 1px solid #ccc;
+    }
+    .img-diagrama-gantt {
+      max-width: 100%;
+      border: 1px solid #ccc;
+    }
