--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,14 +9,14 @@
   }
 
     header, footer { 
-      background-color: #333; 
+      background-color: #1bbc9b; 
       color: white; 
       padding: 10px 20px; 
       text-align: center; 
     }
 
     nav { 
-        background-color: #3920d9; 
+        background-color: #15623e; 
         overflow: hidden; 
         padding-left: 10%;
       }
@@ -65,3 +65,37 @@
       max-width: 100%;
       border: 1px solid #ccc;
     }
+    .carousel-container { 
+      text-align: center; 
+      position: relative; 
+      max-width: 800px; 
+      margin: 20px auto; 
+    }
+
+    .carousel-container img { 
+      width: 100%; 
+      height: auto; 
+      display: none; 
+      transition: opacity 0.5s ease-in-out; 
+    }
+
+    .carousel-container img.active { 
+      display: block; 
+    }
+
+    .controls { 
+      margin-top: 10px;
+    }
+
+    .controls button { 
+      padding: 10px 20px; 
+      margin: 5px; 
+      cursor: pointer; 
+    }
+
+    .social-links a { 
+      margin: 0 10px; 
+      text-decoration: none; 
+      color: white; 
+    }
+    
